--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Unlimited Paths</title>
+    <meta name="title" content="Unlimited Paths">
+    <meta name="description"
+        content="Professional solutions tailored for your needs made with Python or NodeJS and deployed on Google Cloud, AWS or Azure">
+    <meta name="keywords"
+        content="cloud, programming, aws, gcp, google cloud, amazon web services, python, nodejs, node js, react, angular, professional solutions, development, software, software house">
+    <meta name="Subject"
+        content="Professional solutions tailored for your needs made with Python or NodeJS and deployed on Google Cloud, AWS or Azure">
+    <meta name="Language" content="English">
+    <meta name="Robots" content="index,nofollow">
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://unlimitedpaths.net">
+    <meta property="og:title" content="Unlimited Paths">
+    <meta property="og:description"
+        content="Professional solutions tailored for your needs made with Python or NodeJS and deployed on Google Cloud, AWS or Azure">
+    <meta property="og:image" content="https://unlimitedpaths.net/img/logo.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://unlimitedpaths.net">
+    <meta property="twitter:title" content="Unlimited Paths">
+    <meta property="twitter:description"
+        content="Professional solutions tailored for your needs made with Python or NodeJS and deployed on Google Cloud, AWS or Azure">
+    <meta property="twitter:image" content="https://unlimitedpaths.net/img/logo.png">
     <link rel="stylesheet" href="css/bulma.min.css">
 </head>
 
@@ -22,7 +46,7 @@
                 <div id="description" class="">
                     <p>Software Development based in Lisbon 🇵🇹</p>
                 </div>
-                <div style="margin-top: 25px;"id="contact" class="">
+                <div style="margin-top: 25px;" id="contact" class="">
                     <a href="mailto:contact@unlimitedpaths.net" class="button is-light">contact@unlimitedpaths.net</a>
                 </div>
             </div>
