added google analytics

--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
         content="Professional solutions tailored for your needs made with Python or NodeJS and deployed on Google Cloud, AWS or Azure">
     <meta property="twitter:image" content="https://unlimitedpaths.net/img/logo.png">
     <link rel="stylesheet" href="css/bulma.min.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-H7WTYEF0TC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-H7WTYEF0TC');
+    </script>
 </head>
 
 <body>
